--- a/src/projects/drumMachine/DrumMachine.module.css
+++ b/src/projects/drumMachine/DrumMachine.module.css
@@ -1,22 +1,31 @@
-* {
-    margin: 0;
-    padding: 0;
+.outerCont {
+    width: 100vw; 
+    height: calc(100vh - 100px);
     background-color: gray;
+    padding-top: 100px;
 }
 
-#drum-machine {
+#drumMachine {
     width: 450px;
     height: 496px;
     background-color: lightgray;
     margin: auto;
-    margin-top: 70px;
     border: 5px solid yellow;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-#head-right {
+#a {
+    position: absolute;
+    top: 8px;
+    left: 8px;
+    font-size: 18px;
+    text-decoration: none;
+    font-weight: 800;
+  }
+
+#headRight {
     background-color: lightgray;
     font-size:  24px;
     font-weight: 800;
@@ -27,14 +36,14 @@
     width: 426px;
 }
 
-#buttons-container {
+#buttonsContainer {
     display: inline-block;
     width: 55%;
     background-color: lightgray;
     margin: 10px;
 }
 
-.drum-pad {
+.drumPad {
     width: 50px;
     height: 50px;
     margin: 16px;
@@ -44,6 +53,7 @@
     font-size: 19px;
     font-weight: 600;
     cursor: pointer;
+    background-color: gray;
 }
 
 .clip {
@@ -60,7 +70,7 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-#toggle-on {
+#toggleOn {
     width:100px;
     height: 35px; 
     margin-top: 10px;
@@ -72,7 +82,7 @@
     justify-content: flex-end;
 }
 
-#toogle-off {
+#toogleOff {
     width:100px;
     height: 35px; 
     margin-top: 10px;
