--- a/src/projects/markdown/Markdown.module.css
+++ b/src/projects/markdown/Markdown.module.css
@@ -1,14 +1,18 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
 .markdownContainer {
     background-color: aqua;
     width: 100vw;
     height: auto;
     display: flex; 
     flex-direction: column;
+}
+
+#a {
+    position: absolute;
+    top: 8px;
+    left: 8px;
+    font-size: 18px;
+    text-decoration: none;
+    font-weight: 800;
 }
 
 .editorContainer {
@@ -35,7 +39,7 @@
 
 .headerContainer {
     width: 100%;
-    height: 24px;
+    height: 28px;
     background-color: blue;
     border: 1px solid black;
     border-top: none;
@@ -63,8 +67,8 @@
 
 #preview {
     width: calc(100% - 52px);
-    height:auto;
-    background-color: yellowgreen;
+    min-height: 300px;
+    background-color: rgb(205, 227, 246);
     padding: 26px;
     overflow-x: scroll;
 }
