--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,11 +3,14 @@
   padding: 0;
 }
 
+body{
+  background-color: navy;
+}
+
 #nav {
-  height: 100vh;
-  width: 100vW;
-  overflow: hidden;
-  background-color: orange;
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .test {
@@ -25,7 +28,7 @@
 }
 
 #ul {
-  height: 100%;
+  margin-top: 80px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -38,8 +41,12 @@
   padding: 20px 2px;
 }
 
+li::marker {
+  color: white;
+}
+
 #ul>li>a {
   font-size: 24px;
-  text-decoration: none;
+  text-decoration: underline;
   color: white;
 }
