--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,14 +3,12 @@
   padding: 0;
 }
 
-body{
-  background-color: navy;
-}
-
 #nav {
-  height: 100%;
+  height: 100vh;
   width: 100%;
   overflow-x: hidden;
+  background-color: navy;
+  position: fixed;
 }
 
 .test {
