--- a/src/projects/drumMachine/DrumMachine.module.css
+++ b/src/projects/drumMachine/DrumMachine.module.css
@@ -3,6 +3,7 @@
     height: calc(100vh - 100px);
     background-color: gray;
     padding-top: 100px;
+    position: fixed;
 }
 
 #drumMachine {
@@ -23,6 +24,7 @@
     font-size: 18px;
     text-decoration: none;
     font-weight: 800;
+    color: blue;
   }
 
 #headRight {
