--- a/src/projects/markdown/Markdown.module.css
+++ b/src/projects/markdown/Markdown.module.css
@@ -1,18 +1,21 @@
 .markdownContainer {
     background-color: aqua;
     width: 100vw;
-    height: auto;
+    height: 100%;
     display: flex; 
     flex-direction: column;
+    position: fixed;
+    overflow-y: scroll;
 }
 
 #a {
-    position: absolute;
+    position: fixed;
     top: 8px;
     left: 8px;
     font-size: 18px;
     text-decoration: none;
     font-weight: 800;
+    z-index: 12;
 }
 
 .editorContainer {
