--- a/src/projects/quoteMachine/QuoteMachine.module.css
+++ b/src/projects/quoteMachine/QuoteMachine.module.css
@@ -3,14 +3,16 @@
   width: 100vw;
   border: none;
   display: inline-block;
+  position: fixed;
   }
 
   #a {
-    position: absolute;
+    position: fixed;
     margin: 8px;
     font-size: 18px;
     text-decoration: none;
     font-weight: 800;
+    z-index: 12;
   }
   
   #quoteBox {
@@ -42,6 +44,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  position: relative;
+  bottom: 10px;
   }
   
   #author {
